k8s2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-springboot2-svc
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      appID: java-springboot2-svc
  template:
    metadata:
      annotations:
        # https://access.redhat.com/documentation/en-us/openshift_container_platform/4.4/html/jaeger/jaeger-sidecar-automatic_jaeger-deploying
        # "sidecar.jaegertracing.io/inject": "true"
        # https://github.com/open-telemetry/opentelemetry-helm-charts/tree/main/charts/opentelemetry-operator#install-opentelemetry-collector
        sidecar.opentelemetry.io/inject: "true"
      labels:
        appID: java-springboot2-svc
    spec:
      containers:
        - name: java
          image: java-springboot-svc:dont_push
          imagePullPolicy: IfNotPresent
          # --add-opens java.base/java.lang=ALL-UNNAMED - https://stackoverflow.com/questions/68168691/java-lang-reflect-inaccessibleobjectexception-unable-to-make-protected-final-ja
          command:
            - /bin/bash
            - -c
            - |
              /update-tz.sh
              java --add-opens java.base/java.lang=ALL-UNNAMED -javaagent:/opentelemetry-javaagent.jar -jar /app.jar
          # java --add-opens java.base/java.lang=ALL-UNNAMED -jar /app.jar
          # java --add-opens java.base/java.lang=ALL-UNNAMED -javaagent:/opentelemetry-javaagent.jar -jar /app.jar
          ports:
            - name: http
              containerPort: 8080  # spring boot HTTP port
            - name: http-metrics
              containerPort: 8081  # spring boot actuator HTTP port
            - name: xxljob
              containerPort: 9999  # xxl-job HTTP port
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 30
