k8s2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-springboot2-svc
  namespace: apps
spec:
  selector:
    appID: java-springboot2-svc
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: http-metrics
    protocol: TCP
    port: 8081
    targetPort: 8081
